--- a/huu-ich/index.html
+++ b/huu-ich/index.html
@@ -404,6 +404,7 @@ https://www.lhboi.name.vn/huu-ich/
 
   <h1>Các bài khác trong cùng mục này</h1>
   <ul>
+    <li>Lập <a href="ke-hoach-tai-chinh/">kế-hoạch-tài-chính</a> trọn-đời</li>
     <li><a href="cac-giai-doan">Các giai-đoạn khác nhau trong đời-người</a> và <a href="cau-chuyen/nhung-hon-da">những hòn-đá của cuộc-đời</a></li>
     <li><a href="dung-so-dau-tu">Bắt-đầu đầu-tư từ đâu?</a></li>
     <li><a href="cau-chuyen/nghi-huu-som">Làm-thế-nào để được <i>về-hưu sớm</i></a> và có <a href="cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia">tuổi-già an-nhàn</a>?</li>
