--- a/huu-ich/index.html
+++ b/huu-ich/index.html
@@ -179,7 +179,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <section>
       <h4 class="myheader">Lập-kế-hoạch-tài-chính</h4>
       <p>
-        <a href='/huu-ich/ke-hoach-tai-chinh/index.html'>Giới-thiệu</a><br>
+        <a href='/huu-ich/ke-hoach-tai-chinh/'>Giới-thiệu</a><br>
         <a href='/huu-ich/ke-hoach-tai-chinh/khtcp1'>Kế-hoạch-tích-luỹ</a><br>
         <a href='/huu-ich/ke-hoach-tai-chinh/khtcp2'>Kế-hoạch-an-hưởng</a><br>
         <a href='/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han'>Ghi-chép kết-quả-đầu-tư-dài-hạn</a><br>
@@ -390,11 +390,11 @@ https://www.lhboi.name.vn/huu-ich/
   <br>Một trường-hợp có thật là <a href="http://cafef.vn/toan-he-thong-the-kafe-da-dong-cua-sau-nua-nam-dao-chi-anh-dut-ao-ra-di-cai-ket-buon-cua-mot-start-up-trieu-do-20170419112201572.chn" target='_blank'>The KAfe</a>.
   <br>Không-thể quản-lý một số-tiền quá lớn nhưng mỗi-người đều cần phải có <a href="tich-luy">một khối-tài-sản ít nhất hàng chục tỉ đồng lúc về-hưu</a>. Làm-thế-nào để cho khối-tài-sản đó sinh-lợi? Đó là <a href="de-tien-vao-dau">đầu-tư</a>. Rất nhiều người cho rằng đầu-tư là một việc gì rất lớn và khó, họ không nên nghĩ đến nó. Thật ra đầu-tư bắt-đầu từ việc <a href="dung-so-dau-tu">đơn-giản nhất</a> là gửi tiết-kiệm ở ngân-hàng và tiếp-theo là những việc <a href="cach-dau-tu">hiện-đại hơn</a>.</p>
   <p>Bên-cạnh việc tích-luỹ làm gia-tăng tài-sản mỗi-người còn phải <a href="cac-loai-bao-hiem/">bảo-vệ</a> tài-sản đó trước những việc bất-ngờ không-mong-muốn.</p>
-  <p>Tất-cả những việc trên có-thể được đưa vào một <a href="ke-hoach-tai-chinh/index.html">kế-hoạch</a> rõ-ràng nhờ phần-mềm-máy-tính.</p>
+  <p>Tất-cả những việc trên có-thể được đưa vào một <a href="ke-hoach-tai-chinh/">kế-hoạch</a> rõ-ràng nhờ phần-mềm-máy-tính.</p>
 
   <h1>Các bài khác trong cùng mục này</h1>
   <ul>
-    <li>Lập <a href="ke-hoach-tai-chinh/index.html">kế-hoạch-tài-chính</a> trọn-đời</li>
+    <li>Lập <a href="ke-hoach-tai-chinh/">kế-hoạch-tài-chính</a> trọn-đời</li>
     <li><a href="cac-giai-doan">Các giai-đoạn khác nhau trong đời-người</a> và <a href="cau-chuyen/nhung-hon-da">những hòn-đá của cuộc-đời</a></li>
     <li><a href="dung-so-dau-tu">Bắt-đầu đầu-tư từ đâu?</a></li>
     <li><a href="cau-chuyen/nghi-huu-som">Làm-thế-nào để được <i>về-hưu sớm</i></a> và có <a href="cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia">tuổi-già an-nhàn</a>?</li>
