--- a/huu-ich/ke-hoach-tai-chinh/index.html
+++ b/huu-ich/ke-hoach-tai-chinh/index.html
@@ -180,8 +180,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <h4 class="myheader">Lập-kế-hoạch-tài-chính</h4>
       <p>
         <a href='/huu-ich/ke-hoach-tai-chinh/'>Giới-thiệu</a><br>
-        <a href='/huu-ich/ke-hoach-tai-chinh/khtcp1'>Kế-hoạch-tích-luỹ</a><br>
-        <a href='/huu-ich/ke-hoach-tai-chinh/khtcp2'>Kế-hoạch-an-hưởng</a><br>
+        <a href='/huu-ich/ke-hoach-tai-chinh/khtcp1.html'>Kế-hoạch-tích-luỹ</a><br>
+        <a href='/huu-ich/ke-hoach-tai-chinh/khtcp2.html'>Kế-hoạch-an-hưởng</a><br>
         <a href='/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han'>Ghi-chép kết-quả-đầu-tư-dài-hạn</a><br>
         <a href='/huu-ich/ke-hoach-tai-chinh/bao-ve'>Bảo-vệ nguồn-thu-nhập</a><br>
         <a href='/huu-ich/ke-hoach-tai-chinh/tang-thu-nhap'>Tăng thu-nhập</a>
@@ -395,8 +395,8 @@ Trang web này giúp mọi người giải quyết những khó khăn đó, tín
 <br>Lập kế hoạch tài chính từ sớm để <b>chắc chắn</b> có đủ tiền sống đến hết đời.</p>
 <p>Đây là <strong>phiên bản 2.1</strong> của bản hướng dẫn lập kế hoạch tài chính (<a href="khtc1">bản 1.0</a> đã được phát hành năm 2012). Phiên bản mới dễ dùng hơn, tính đến những hoạt động tài chính thường gặp, và cho kết quả dễ thực hiện hơn. Phiên bản mới vẽ ra lộ trình tích luỹ tài sản trong suốt cuộc đời mỗi người hay mỗi gia đình với hai file công cụ tính cho hai giai đoạn tài chính của đời người:</p>
 <ol>
-  <li>Chủ động làm ra tiền để chi tiêu và tích luỹ, cần phải kiểm soát mức tăng tài sản để kịp có những món tiền lớn đúng lúc và không ảnh hưởng đến những kế hoạch tiếp theo. <strong>Nếu bạn đang trong giai đoạn kiếm tiền thì hãy xem trang <a href="khtcp1">KHTCp1</a></strong>.</li>
-  <li>Chi tiêu từ khoản tiền đã tích luỹ ở giai đoạn trên, cần phải điều chỉnh mức chi tiêu để bảo đảm đủ tiền sống trọn đời. <strong>Nếu bạn đã bước vào giai đoạn hưởng thụ thì hãy xem trang <a href="khtcp2">KHTCp2</a></strong>.</li>
+  <li>Chủ động làm ra tiền để chi tiêu và tích luỹ, cần phải kiểm soát mức tăng tài sản để kịp có những món tiền lớn đúng lúc và không ảnh hưởng đến những kế hoạch tiếp theo. <strong>Nếu bạn đang trong giai đoạn kiếm tiền thì hãy xem trang <a href="khtcp1.html">KHTCp1</a></strong>.</li>
+  <li>Chi tiêu từ khoản tiền đã tích luỹ ở giai đoạn trên, cần phải điều chỉnh mức chi tiêu để bảo đảm đủ tiền sống trọn đời. <strong>Nếu bạn đã bước vào giai đoạn hưởng thụ thì hãy xem trang <a href="khtcp2.html">KHTCp2</a></strong>.</li>
 </ol>
 
 <p>Bảng tính này chỉ dùng để lập kế hoạch; để theo dõi việc thực hiện kế hoạch hàng ngày bạn nên dùng phần mềm <a href="/kinh-nghiem/may-tinh/gnucash">gnucash</a> và file spreadsheet <a href="dau-tu-dai-han">ĐTDH</a>.</p>
