--- a/en/fa/pfr/pfr1.html
+++ b/en/fa/pfr/pfr1.html
@@ -166,9 +166,9 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <section expanded>
       <h4 class="myheader">Personal Financial Roadmap</h4>
       <p>
-        <a href='/fa/pfr/'>Overview</a><br>
-        <a href='/fa/pfr/pfr1.html'>In working years</a><br>
-        <a href='/fa/pfr/pfr2.html'>In retire years</a><br>
+        <a href='/en/fa/pfr/'>Overview</a><br>
+        <a href='/en/fa/pfr/pfr1.html'>In working years</a><br>
+        <a href='/en/fa/pfr/pfr2.html'>In retire years</a><br>
       </p>
     </section>
   </div>
