--- a/en/fa/pfr/pfr2.html
+++ b/en/fa/pfr/pfr2.html
@@ -165,9 +165,9 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <section expanded>
       <h4 class="myheader">Personal Financial Roadmap</h4>
       <p>
-        <a href='/fa/pfr/'>Overview</a><br>
-        <a href='/fa/pfr/pfr1'>In working years</a><br>
-        <a href='/fa/pfr/pfr2'>In retire years</a><br>
+        <a href='/en/fa/pfr/'>Overview</a><br>
+        <a href='/en/fa/pfr/pfr1'>In working years</a><br>
+        <a href='/en/fa/pfr/pfr2'>In retire years</a><br>
       </p>
     </section>
   </div>
@@ -189,7 +189,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <div class="body">
     <div class="title">Personal Financial Roadmap (retirement)</div>
 <div class="right">First draft in February, 2019.</div>
-<div class="right">(More in <a href="http://lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/khtcp2">Vietnamese</a>)</div>
+<div class="right">(Read more in <a href="http://lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/khtcp2">Vietnamese</a>)</div>
 
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
