--- a/en/fa/pfr/index.html
+++ b/en/fa/pfr/index.html
@@ -188,7 +188,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <div class="body">
     <div class="title">Personal Financial Roadmap</div>
 <div class="right">First draft in February 2019.</div>
-<div class="right">(More in <a href="http://lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/">Vietnamese</a>)</div>
+<div class="right">(Read more in <a href="http://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/">Vietnamese</a>)</div>
 
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
