--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="description" content="Trang-web cá-nhân Lê Hồng Bội, chia-sẻ những thông-tin hữu-ích nhằm làm cho xã-hội tốt hơn" />
 <meta name="keywords" content="hữu-ích, tài-chính-cá-nhân, đầu-tư, tiết-kiệm, làm giàu chắc-chắn">
 <link rel="canonical" href="https://www.lhboi.name.vn/">
+	<meta name="google-site-verification" content="jCwI7we54eNiokZxz0zEQqvUOLRSFigpD-KJs0wEoc0" />
 <!-- in head of html file -->
 
 <meta charset='utf-8'>
