--- a/template.html
+++ b/template.html
@@ -185,7 +185,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <h4 class="myheader">Đầu-tư-cổ-phiếu</h4>
       <p>
         <a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a><br>
-        <a href='/huu-ich/dau-tu-co-phieu/qui-dau-t.html'>Quỹ-đầu-tư</a><br>
+        <a href='/huu-ich/dau-tu-co-phieu/quy-dau-tu.html'>Quỹ-đầu-tư</a><br>
         <a href='/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html'>Sổ-tiết-kiệm hay Quỹ-đầu-tư?</a><br>
         <a href='/huu-ich/dau-tu-co-phieu/thi-truong-xuong-doc.html'>Làm gì khi thị-trường xuống-dốc?</a>
       </p>
@@ -201,36 +201,24 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <section>
       <h4 class="myheader">Câu-chuyện</h4>
       <p>
-        <a href='/huu-ich/cau-chuyen/bai-hoc-pho-thong'>Bài-học-phổ-thông</a><br>
-        <a href='/huu-ich/cau-chuyen/nhung-hon-da'>Những hòn-đá</a><br>
-        <a href='/huu-ich/cau-chuyen/dang-thieng-lieng'>Sứ-giả của Đấng-Thiêng-Liêng</a><br>
-        <a href='/huu-ich/cau-chuyen/bat-dau-dau-tu'>Bắt-đầu đầu-tư</a><br>
-        <a href='/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu'>Ước-mơ thành tỷ-phú</a><br>
-        <a href='/huu-ich/cau-chuyen/kakeibo'>Tiết-kiệm tiền kiểu Nhật</a><br>
-        <a href='/huu-ich/cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia'>Những quyết-định tốt cho tuổi-già</a><br>
-        <a href='/huu-ich/cau-chuyen/nghi-huu-som'>Về-hưu trước 40 tuổi</a><br>
-        <a href='/huu-ich/cau-chuyen/tranh-mang-no'>Tránh mang nợ</a><br>
-        <a href='/huu-ich/cau-chuyen/dung-the-tin-dung-khon-ngoan'>Dùng thẻ-tín-dụng một cách khôn-ngoan</a><br>
-        <a href='/huu-ich/cau-chuyen/mua-nha-hay-dau-tu'>Để tiền mua-nhà hay đầu-tư</a><br>
-        <a href='/huu-ich/cau-chuyen/bot-lo-ve-tien'>6 điều giúp tôi bớt lo-lắng về tiền-bạc</a><br>
-        <a href='/huu-ich/cau-chuyen/sinh-lao-benh-tu'>Sinh Lão Bệnh Tử</a>
+        <a href='/huu-ich/cau-chuyen/bat-dau-dau-tu.html'>Bắt-đầu đầu-tư</a><br>
+        <a href='/huu-ich/cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia.html'>Những quyết-định tốt cho tuổi-già</a><br>
+        <a href='/huu-ich/cau-chuyen/nghi-huu-som.html'>Về-hưu trước 40 tuổi</a><br>
+        <a href='/huu-ich/cau-chuyen/tranh-mang-no.html'>Tránh mang nợ</a><br>
+        <a href='/huu-ich/cau-chuyen/mua-nha-hay-dau-tu.html'>Để tiền mua-nhà hay đầu-tư</a><br>
+        <a href='/huu-ich/cau-chuyen/bot-lo-ve-tien.html'>6 điều giúp tôi bớt lo-lắng về tiền-bạc</a><br>
       </p>
     </section>
     </amp-accordion>
-    <a href='/huu-ich/cac-giai-doan'>Các giai-đoạn của cuộc-đời</a><br>
-    <a href='/huu-ich/chi-tieu'>Chi-tiêu có kế-hoạch</a><br>
-    <a href='/huu-ich/nghi-luc'>Nghị-lực để có dư tiền</a><br>
-    <a href='/huu-ich/lam-phat-loi-song'>Lạm-phát-lối-sống</a><br>
-    <a href='/huu-ich/tich-luy'>Tích-luỹ-tài-sản</a><br>
-    <a href='/huu-ich/lam-giau-khong-kho'>Làm-giàu không khó</a><br>
-    <a href='/huu-ich/de-tien-vao-dau'>Để tiền vào đâu</a><br>
-    <a href='/huu-ich/cach-dau-tu'>Những cách đầu-tư</a><br>
-    <a href='/huu-ich/dung-so-dau-tu'>Đừng sợ chữ đầu-tư</a><br>
-    <a href='/huu-ich/hieu-qua-dau-tu'>Tính hiệu-quả-đầu-tư</a><br>
-    <a href='/huu-ich/tich-luy-dai-han'>So-sánh công-cụ tích-luỹ-dài-hạn</a><br>
-    <a href='/huu-ich/vao-dai-hoc'>Chuẩn-bị vào đại-học</a><br>
-    <a href='/huu-ich/tien-thuong-cuoi-nam'>Tiền-thưởng cuối năm</a><br>
-    <a href='/huu-ich/thong-ke-huu-tri-tu-nguyen-my'>Vài số-liệu về quỹ-hưu-trí-tự-nguyện ở Mỹ</a>
+    <a href='/huu-ich/chi-tieu.html'>Chi-tiêu có kế-hoạch</a><br>
+    <a href='/huu-ich/nghi-luc.html'>Nghị-lực để có dư tiền</a><br>
+    <a href='/huu-ich/lam-phat-loi-song.html'>Lạm-phát-lối-sống</a><br>
+    <a href='/huu-ich/tich-luy.html'>Tích-luỹ-tài-sản</a><br>
+    <a href='/huu-ich/de-tien-vao-dau.html'>Để tiền vào đâu</a><br>
+    <a href='/huu-ich/cach-dau-tu.html'>Những cách đầu-tư</a><br>
+    <a href='/huu-ich/dung-so-dau-tu.html'>Đừng sợ chữ đầu-tư</a><br>
+    <a href='/huu-ich/hieu-qua-dau-tu.html'>Tính hiệu-quả-đầu-tư</a><br>
+    <a href='/huu-ich/tich-luy-dai-han.html'>So-sánh công-cụ tích-luỹ-dài-hạn</a><br>
   </div>
 </section>
 <section>
@@ -239,32 +227,19 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <section>
     <h4 class="myheader">Máy-tính</h4>
     <p>
-      <a href='/kinh-nghiem/may-tinh/pi-network'>Tiền-mật-mã Pi</a><br>
-      <a href='/kinh-nghiem/may-tinh/gnucash'>GnuCash</a><br>
-      <a href='/kinh-nghiem/may-tinh/bat-dau-gnucash'>Bắt-đầu dùng GnuCash</a><br>
-      <a href='/kinh-nghiem/may-tinh/ham-tai-chinh'>Các phép-tính-tài-chính cần biết</a><br>
-      <a href='/kinh-nghiem/may-tinh/cloudstorage'>Kinh-nghiệm dùng cloud storage</a><br>
-      <a href='/kinh-nghiem/may-tinh/privcloudstor'>Hướng-dẫn làm cloud storage server</a><br>
-      <a href='/kinh-nghiem/may-tinh/roaming'>Wi-Fi Roaming</a><br>
-      <a href="/kinh-nghiem/may-tinh/vi-dien-tu">Nhận-xét các ví-điện-tử</a><br>
-      <a href='/kinh-nghiem/may-tinh/tien-ich-di-dong'>Tiện-ích-di-động</a><br>
-      <a href='/kinh-nghiem/may-tinh/OTT-apps'>OTT app để liên-lạc</a><br>
-      <a href='/kinh-nghiem/may-tinh/goi-cuoc-di-dong-noi-mang'>Gói-cước-di-động nội-mạng</a><br>
-      <a href='/kinh-nghiem/may-tinh/cashflow'>Trò-chơi học-làm-giàu Cashflow</a><br>
-      <a href='/kinh-nghiem/may-tinh/tai-khoan-google'>Tạo tài-khoản Google</a><br>
-      <a href='/kinh-nghiem/may-tinh/googlemaps'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a><br>
-      <a href='/kinh-nghiem/may-tinh/spam-call'>Chặn những cuộc-gọi-tiếp-thị</a><br>
-      <a href='/kinh-nghiem/may-tinh/raspberrypi'>RaspberryPi</a><br>
-      <a href='/kinh-nghiem/may-tinh/oss'>Phần-mềm-mã-nguồn-mở</a><br>
-      <a href='/kinh-nghiem/may-tinh/phan-mem-tu-do'>Phần-mềm-tự-do</a><br>
-      <a href='/kinh-nghiem/may-tinh/in-sach-nho'>In sách nhỏ</a><br>
-      <a href='/kinh-nghiem/may-tinh/pin-lithium-ion'>Pin Lithium Ion</a><br>
-      <a href='/kinh-nghiem/may-tinh/linux'>Linux</a><br>
-      <a href='/kinh-nghiem/may-tinh/spam'>Spam</a><br>
-      <a href='/kinh-nghiem/may-tinh/toys'>Home server cũ</a><br>
-      <a href='/kinh-nghiem/may-tinh/cryptocurrency'>Tìm-hiểu Bitcoin</a><br>
-
-      <a href='/kinh-nghiem/may-tinh/protect'>Bảo vệ tài sản số</a>
+      <a href='/kinh-nghiem/may-tinh/pi-network.html'>Tiền-mật-mã Pi</a><br>
+      <a href='/kinh-nghiem/may-tinh/gnucash.html'>GnuCash</a><br>
+      <a href='/kinh-nghiem/may-tinh/ham-tai-chinh.html'>Các phép-tính-tài-chính cần biết</a><br>
+      <a href='/kinh-nghiem/may-tinh/cloudstorage.html'>Kinh-nghiệm dùng cloud storage</a><br>
+      <a href='/kinh-nghiem/may-tinh/privcloudstor.html'>Hướng-dẫn làm cloud storage server</a><br>
+      <a href="/kinh-nghiem/may-tinh/vi-dien-tu.html">Nhận-xét các ví-điện-tử</a><br>
+      <a href='/kinh-nghiem/may-tinh/googlemaps.html'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a><br>
+      <a href='/kinh-nghiem/may-tinh/spam-call.html'>Chặn những cuộc-gọi-tiếp-thị</a><br>
+      <a href='/kinh-nghiem/may-tinh/raspberrypi.html'>RaspberryPi</a><br>
+      <a href='/kinh-nghiem/may-tinh/spam.html'>Chặn spam mail</a><br>
+      <a href='/kinh-nghiem/may-tinh/toys.html'>Home server cũ</a><br>
+      <a href='/kinh-nghiem/may-tinh/cryptocurrency.html'>Tìm-hiểu Bitcoin</a><br>
+      <a href='/kinh-nghiem/may-tinh/protect.html'>Bảo vệ tài sản số</a>
     </p>
   </section>
 
@@ -272,10 +247,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
     <h4 class="myheader">Chữ Việt</h4>
     <p>
-      <a href='/kinh-nghiem/chu-viet/ghi-dau-thanh-1'>Vị trí dấu thanh</a><br>
-      <a href='/kinh-nghiem/chu-viet/unicode'>Unicode</a><br>
-      <a href='/kinh-nghiem/chu-viet/utf-8'>UTF-8</a><br>
-      <a href='/kinh-nghiem/chu-viet/web'>Web Việt</a>
+      <a href='/kinh-nghiem/chu-viet/ghi-dau-thanh-1.html'>Vị trí dấu thanh</a><br>
+      <a href='/kinh-nghiem/chu-viet/unicode.html'>Unicode</a><br>
+      <a href='/kinh-nghiem/chu-viet/utf-8.html'>UTF-8</a><br>
+      <a href='/kinh-nghiem/chu-viet/web.html'>Web Việt</a>
     </p>
   </section>
 
@@ -283,18 +258,17 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
     <h4 class="myheader">Linh tinh</h4>
     <p>
-      <a href='/kinh-nghiem/linh-tinh/bep'>Bếp</a><br>
-      <a href='/kinh-nghiem/linh-tinh/ac-dc'>Điện một chiều và điện xoay chiều</a><br>
-      <a href='/kinh-nghiem/linh-tinh/tieu-thu-dien'>Tiêu thụ điện</a><br>
-      <a href='/kinh-nghiem/linh-tinh/dien-standby'>Điện standby</a><br>
-      <a href='/kinh-nghiem/linh-tinh/magchan'>Dùng thử Magchan để giặt</a><br>
-      <a href='/kinh-nghiem/linh-tinh/may-lanh'>Máy lạnh</a><br>
-      <a href='/kinh-nghiem/linh-tinh/may-lanh-inverter'>Máy lạnh inverter</a><br>
-      <a href='/kinh-nghiem/linh-tinh/nong'>Nóng</a><br>
-      <a href='/kinh-nghiem/linh-tinh/nhiet-do'>Nhiệt độ một ngày</a><br>
-      <a href='/kinh-nghiem/linh-tinh/tan-so-cua-tv'>Tần số của TV</a><br>
-      <a href='/kinh-nghiem/linh-tinh/anh'>Ảnh</a><br>
-      <a href='/kinh-nghiem/linh-tinh/hong-ngoai'>Hồng ngoại</a><br>
+      <a href='/kinh-nghiem/linh-tinh/bep.html'>Bếp</a><br>
+      <a href='/kinh-nghiem/linh-tinh/ac-dc.html'>Điện một chiều và điện xoay chiều</a><br>
+      <a href='/kinh-nghiem/linh-tinh/tieu-thu-dien.html'>Tiêu thụ điện</a><br>
+      <a href='/kinh-nghiem/linh-tinh/dien-standby.html'>Điện standby</a><br>
+      <a href='/kinh-nghiem/linh-tinh/magchan.html'>Dùng thử Magchan để giặt</a><br>
+      <a href='/kinh-nghiem/linh-tinh/may-lanh.html'>Máy lạnh</a><br>
+      <a href='/kinh-nghiem/linh-tinh/may-lanh-inverter.html'>Máy lạnh inverter</a><br>
+      <a href='/kinh-nghiem/linh-tinh/nong.html'>Nóng</a><br>
+      <a href='/kinh-nghiem/linh-tinh/nhiet-do.html'>Nhiệt độ một ngày</a><br>
+      <a href='/kinh-nghiem/linh-tinh/tan-so-cua-tv.html'>Tần số của TV</a><br>
+      <a href='/kinh-nghiem/linh-tinh/hong-ngoai.html'>Hồng ngoại</a><br>
     </p>
   </section>
   </amp-accordion>
@@ -302,18 +276,14 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <section>
   <h3 class="myheader">Ý kiến</h3>
   <p>
-    <a href='/y-kien/bat-ca-hai-tay'>Bắt cá hai tay</a><br>
-    <a href='/y-kien/su-giau-co'>Nguồn gốc sự giàu có</a><br>
-    <a href='/y-kien/do-giau'>Đo độ giàu có</a><br>
-    <a href='/y-kien/xa-hoi-thong-tin'>Xã hội thông tin</a><br>
-    <a href='/y-kien/dung-hang-viet-nam'>Dùng hàng Việt</a><br>
-    <a href='/y-kien/muc-hay-den'>Gần mực thì đen, gần đèn thì sáng</a><br>
-    <a href='/y-kien/thanh-ngu-ve-tien'>Thành ngữ về tiền</a><br>
-    <a href='/y-kien/tien-va-mau'>Tiền và Máu</a><br>
-    <a href='/y-kien/gia-tra'>Giả trá</a><br>
-    <a href='/y-kien/nhung-cai-nem'>Những cái nêm</a><br>
-    <a href='/y-kien/khac-nguoi'>Khác người</a><br>
-    <a href='/y-kien/da-len-bao'>Đã lên báo</a>
+    <a href='/y-kien/bat-ca-hai-tay.html'>Bắt cá hai tay</a><br>
+    <a href='/y-kien/su-giau-co.html'>Nguồn gốc sự giàu có</a><br>
+    <a href='/y-kien/xa-hoi-thong-tin.html'>Xã hội thông tin</a><br>
+    <a href='/y-kien/dung-hang-viet-nam.html'>Dùng hàng Việt</a><br>
+    <a href='/y-kien/gia-tra.html'>Giả trá</a><br>
+    <a href='/y-kien/nhung-cai-nem.html'>Những cái nêm</a><br>
+    <a href='/y-kien/khac-nguoi.html'>Khác người</a><br>
+    <a href='/y-kien/da-len-bao.html'>Đã lên báo</a>
   </p>
 </section>
 
@@ -322,7 +292,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader">Danh mục</h3>
   <p>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap'>Mục lục</a>
+    <a href='/sitemap.html'>Mục lục</a>
   </p>
 </section>
 
